<resources>
    <string name="app_name">HopHacks</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="study_rooms">Study rooms</string>
    <string name="entertainment">Entertainment</string>
    <string name="previous">Previous</string>
    <string name="question">Whatcha\' Feeling</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="quiet">quiet</string>
    <string name="low_volume">low volume</string>
    <string name="medium">medium volume</string>
    <string name="louder">louder</string>
    <string name="brody">brody</string>
    <string name="readingroom">reading room</string>
    <string name="volume">Volume</string>
    <string name="computers">Computers</string>
    <string name="whiteboards">Whiteboards</string>
    <string name="printers">Printers/Copiers</string>
    <string name="projectors">Projectors</string>
    <string name="logo">logo</string>
    <string name="equipment">Equipment</string>
    <string name="food">Food</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="refood">Do you want to eat there?</string>
    <string name="PhotoOfMuddHall">Photo of Mudd Hall</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Personalized campus navigation made by students, for students.</string>
    <string name="seating">Seating</string>
    <string name="privacy">Privacy</string>
    <string name="lowpriv">With other people</string>
    <string name="aloneishpriv">Alone but okay with others around me</string>
    <string name="alonepriv">I dont want to be bothered</string>
    <string name="privat">Super private space</string>
</resources>